+Camera only works on devices (both platforms) +Database fixed +Accelerometer only works on devices and android emulator (not working on iOS simulator) +Location only works on devices (both platforms) +WebView fixed on iOS +some test fixes

--- a/app/app.scss
+++ b/app/app.scss
@@ -118,6 +118,7 @@ ActionBar {
 .list-view, text-field, text-view, search-bar{
     border-radius: $small-radius;
     border-width: 1;
+    background-color: transparent;
 }
 
 text-field{
